# AReaL

./: .gitmodules  README.md  pyproject.toml  run.sh  run_secodeplt.sh
areal/experimental/adk/: __init__.py  areal_llm.py
examples/aigise/: aigise_grpo_mt.yaml  aigise_rl_mt.py  configs.py  workflow.py
