[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[project]
name = "areal"
description = "AReaL: A Large-Scale Asynchronous Reinforcement Learning System"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12,<3.13"
version = "0.5.3"
authors = [
    {name = "AReaL Team"},
]
maintainers = [
    {name = "AReaL Team"},
]
keywords = [
    "distributed-systems",
    "reinforcement-learning",
    "large-language-models",
    "llm-training",
    "llm-agent",
    "agentic-rl",
]
classifiers = [
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: GPU :: NVIDIA CUDA :: 12",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    # Workspace member
    "aigise",

    # Core ML/AI libraries
    "torch>=2.9.1,<2.10",
    "torchao>=0.15.0",
    "torchaudio",
    "torchvision",
    "torchdata",
    "huggingface_hub",
    "datasets>=3.0.0",
    "transformers==4.57.1",
    "peft",
    "qwen_agent",
    "openai-agents",
    "anthropic",
    "claude-agent-sdk",
    "litellm[proxy]>=1.81.3",
    "openhands",
    "langchain",
    "langchain-openai",

    # Visualization
    "pandas",
    "matplotlib",
    "seaborn",

    # Utilities and data processing
    "setproctitle",
    "nltk",
    "sentencepiece",
    "einops",
    "orjson",
    "tqdm",
    "rich",
    "pydantic",
    "PyYAML",
    "omegaconf==2.4.0.dev2",
    "hydra-core==1.4.0.dev1",
    "packaging",
    "lark",
    "tabulate",
    "pybase64",
    "msgspec",
    "math-verify==0.8.0",
    "dotenv",
    "json5",
    "psutil",
    "nvidia-ml-py; sys_platform == 'linux'",
    "ninja",
    "numba",
    "blosc",
    "pybind11>=2.10.0",
    "networkx==3.3",
    "aiofiles",
    "aiohttp>=3.11.10",
    "httpx>=0.28.1",
    "pyzmq",
    "regex",
    "python_dateutil",
    "word2number",
    "pebble",
    "timeout-decorator",
    "prettytable",
    "h5py",
    "mathruler==0.1.0",

    # Monitoring and logging
    "wandb",
    "tensorboardx",
    "colorama",
    "colorlog",
    "swanboard==0.1.9b1",
    "swanlab[dashboard]==0.6.12",

    # Distributed computing
    "ray[default]",
    "redis",

    # Web frameworks
    "fastapi>=0.115.12",
    "uvicorn",
    "uvloop>=0.21.0",
    "flask",
    "tenacity",

    # Build and packaging tools
    "build>=1.2.1",
    "wheel>=0.43.0",
    "cookiecutter>2.1.1",
    "distro-info>=1.0",
    "python-debian>=0.1.49",
]

[project.optional-dependencies]
# CUDA-dependent extras - these packages only have Linux x86_64 wheels
# Platform markers ensure they're skipped on unsupported platforms
sglang = [
    "sglang[tracing]==0.5.7; sys_platform == 'linux' and platform_machine == 'x86_64'",
]
vllm = [
    "vllm==0.14.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
]
tms = [
    "torch_memory_saver==0.0.9; sys_platform == 'linux'",
]
flash-attn = [
    "flash-attn==2.8.1; sys_platform == 'linux' and platform_machine == 'x86_64'",
]
megatron = [
    "megatron-core==0.13.1; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "mbridge==0.13.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
]
# Convenience extra for all CUDA packages (requires Linux x86_64 with CUDA)
cuda = [
    "areal[vllm]",
    "areal[sglang]",
    "areal[tms]",
    "areal[megatron]",
    "areal[flash-attn]",
]
# 'all' extra - kept for compatibility, CUDA packages skipped on non-Linux via markers
all = [
    "areal[cuda]",
]

[project.urls]
"Homepage" = "https://github.com/inclusionAI/AReaL"
"Repository" = "https://github.com/inclusionAI/AReaL"
"Documentation" = "https://inclusionai.github.io/AReaL/intro.html"
"Bug Tracker" = "https://github.com/inclusionAI/AReaL/issues"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ipython",
    "ruff==0.14.9",
    "clang-format==19.1.7",
    "sh",
    "mdformat==0.7.17",
    "mdformat-gfm",
    "mdformat-tables",
    "mdformat-frontmatter",
    "plotly",
    "pre-commit",
    "sphinx",
    "sphinx-nefertiti",
    "jupyter-book<2",
]

# =============================================================================
# Tool configurations: uv
# =============================================================================

[tool.uv.build-backend]
# Package is in root directory (not src/), so set module-root to empty string
module-root = ""

[tool.uv.sources]
aigise = { workspace = true }

[tool.uv.workspace]
members = ["AIgiSE"]

[tool.uv]
# Restrict lock file resolution to supported environments
# This prevents uv from failing when CUDA-only packages don't have wheels for macOS
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]
override-dependencies = [
    "torchao>=0.15.0",
    "openai>2.6.1",
    "soundfile>=0.12.1,<0.13.0",
    "outlines-core==0.1.26",
    "grpcio>=1.76.0",
    "grpcio-reflection>=1.76.0",
    "xgrammar == 0.1.29; platform_machine == 'x86_64' or platform_machine == 'aarch64' or platform_machine == 'arm64' or platform_machine == 's390x' or platform_machine == 'ppc64le'",
    "llguidance >= 1.3.0, < 1.4.0; platform_machine == 'x86_64' or platform_machine == 'arm64' or platform_machine == 'aarch64' or platform_machine == 's390x' or platform_machine == 'ppc64le'",
    "networkx>=3.3",
    "uvicorn>=0.31.1",
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch>=2.9.1,<2.10"]

# =============================================================================
# Tool configurations: pytest
# =============================================================================

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::FutureWarning",
    "ignore::UserWarning:torch.*",
    "ignore::UserWarning:transformers.*",
]
markers = [
    "slow: mark test as slow, expected to cost more than 30 seconds and will not run in CI by default.",
    "ci: mark test as must-run in CI (only marked for slow tests).",
    "gpu: mark test that uses a single GPU",
    "multi_gpu: mark test that uses more than one GPU",
]

# =============================================================================
# Tool configurations: ruff
# =============================================================================

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
]
ignore = [
    "E501",  # E501 Line too long
]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "areal",
    "local-folder",
]
from-first = false

[tool.ruff.lint.isort.sections]
"areal" = ["areal"]
